--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Its purpose is to administrate an Urban Terror 4.1 / 4.2 server and provide stat
 <li>Modify the Urban Terror server config file as follows:
 
 <ul>
-<li><code>seta g_logSync "1"</code></li>
+<li><code>seta g_logsync "1"</code></li>
 <li><code>seta g_loghits "1"</code></li>
 </ul>
 </li>
