Update index.html page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>Spunky Bot</h1>
         <h2>Automated game server bot</h2>
-        <a href="https://github.com/urthub/spunky-bot" class="button"><small>View project on</small>GitHub</a>
+        <a href="https://github.com/urthub/spunkybot" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
 
@@ -63,11 +63,11 @@ Its purpose is to administrate an Urban Terror 4.1 / 4.2 server and provide stat
         </section>
 
         <aside id="sidebar">
-          <a href="https://github.com/urthub/spunky-bot/zipball/master" class="button">
+          <a href="https://github.com/urthub/spunkybot/zipball/master" class="button">
             <small>Download</small>
             .zip file
           </a>
-          <a href="https://github.com/urthub/spunky-bot/tarball/master" class="button">
+          <a href="https://github.com/urthub/spunkybot/tarball/master" class="button">
             <small>Download</small>
             .tar.gz file
           </a>
