--- a/index.html
+++ b/index.html
@@ -61,13 +61,15 @@ Its purpose is to administrate an Urban Terror server and provide real time stat
 <li>Run the bot manually: <code>python spunky.py</code>
 </li>
 <li>Or use the provided initscript to run the Spunky Bot as daemon</li>
-</ul><h3>
+</ul>
+
+<h3>
 <a name="first-start-instruction" class="anchor" href="#first-start-instruction"><span class="octicon octicon-link"></span></a>First start instruction</h3>
 
-<ul>
-<li>Connect to your game server and enter in the global chat <code>!iamgod</code> to get the admin level "Head Admin".
-This command is only once available.</li>
-</ul><h3>
+Connect to your game server and enter in the global chat <code>!iamgod</code> to get the admin level "Head Admin".
+This command is only once available.
+
+<h3>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h3>
 
 <p>The Spunky Bot is free and open source, released under the MIT License.</p>
