--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="main-content">
           <p><strong>Spunky Bot</strong> is a lightweight game server administration bot and RCON tool.
 Its purpose is to administrate an Urban Terror server and provide real time statistical data for players.</p>
-<p>Spunky Bot is supporting UrT 4.1 and 4.2 in the latest version.</p>
+<p>Spunky Bot is supporting Urban Terror 4.1 and 4.2 in the latest version.</p>
 
 <h3>
   Features in a nut-shell
