--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ Its purpose is to administrate an Urban Terror server and provide real time stat
   Features in a nut-shell
 </h3>
 <ul>
-<li>lightweight and fast</li>
-<li>Reads the game log file in real time for Urban Terror</li>
+<li>Lightweight and fast</li>
+<li>Reads the game log file in real time</li>
 <li>Different user groups and levels</li>
 <li>No need to give the RCON password to the members, Spunky deals with the access control</li>
 <li>Stores all player related information in a SQLite database</li>
@@ -54,9 +54,9 @@ Its purpose is to administrate an Urban Terror server and provide real time stat
 <li><code>seta g_loghits "1"</code></li>
 </ul>
 </li>
-<li>The Spunky Bot settings are configured in the file <code>/conf/settings.conf</code>
+<li>The Spunky Bot configuration is set in the file <code>/conf/settings.conf</code>
 </li>
-<li>In-game displayed rules are contained in the file <code>/conf/rules.conf</code>
+<li>In-game displayed rotation messages are contained in the file <code>/conf/rules.conf</code>
 </li>
 <li>Run the bot manually: <code>python spunky.py</code>
 </li>
