--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ This command is only once available.
         </section>
 
         <aside id="sidebar">
+          <p>Current version: v1.0.0</p>
           <a href="https://github.com/urthub/spunkybot/zipball/master" class="button">
             <small>Download</small>
             .zip file
@@ -87,7 +88,6 @@ This command is only once available.
         </aside>
       </div>
     </div>
-
   
   </body>
 </html>
